--- a/css/main.css
+++ b/css/main.css
@@ -16,3 +16,20 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+body {
+  margin: 0;
+}
+
+section {
+  background-color: #e5c30a;
+  padding: 1.3rem;
+}
+
+.wrapper {
+  margin: auto;
+  max-width: 45em;
+  flex-wrap: wrap;
+  align-items: center;
+  display: flex;
+}
