--- a/css/main.css
+++ b/css/main.css
@@ -26,10 +26,97 @@ section {
   padding: 1.3rem;
 }
 
+.section-icon {
+  width: 50%;
+}
+
+.section-letter {
+  width: 50%;
+}
+
 .wrapper {
   margin: auto;
   max-width: 45em;
   flex-wrap: wrap;
   align-items: center;
   display: flex;
+}
+
+.section-icon {
+  width: 50%;
+}
+
+section h2 {
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+section p {
+  margin: 0;
+}
+
+@media only screen and (min-width: 25em) {
+
+  .wrapper {
+    justify-content: space-around;
+  }
+
+  .section-letter, .section-icon {
+    width: 41%;
+  }
+
+}
+
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
+  .wrapper {
+    flex-wrap: nowrap;
+  }
+
+  .section-letter {
+    order: 1;
+    width: 14%;
+  }
+
+  .section-body {
+    order: 2;
+    width: 50%;
+  }
+
+  .section-icon {
+    order: 3;
+    width: 14%;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 130%;
+    line-height: 1.5;
+  }
+
+  .section-letter, .section-icon {
+    width: 15.5%;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  html {
+    font-size: 130%;
+  }
+
+}
+
+.img-flex {
+  width: 100%;
+  display: block;
 }
